--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Trio</title>
     <script>
-      // if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-      //   document.documentElement.classList.add('dark')
-      //   localStorage.theme = 'dark'
-      // } else {
-      //   document.documentElement.classList.remove('dark')
-      //   localStorage.theme = 'light'
-      // }
+      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark')
+        localStorage.theme = 'dark'
+      } else {
+        document.documentElement.classList.remove('dark')
+        localStorage.theme = 'light'
+      }
     </script>
   </head>
   <body>
