One more puzzle and form..?

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,13 @@
     </script>
   </head>
   <body>
+    <!-- A little help for the Netlify post-processing bots -->
+    <form name="trio-suggestion" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="text" name="trio" />
+      <input type="text" name="answer" />
+      <textarea name="contact"></textarea>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
